@@ -1,3 +1,4 @@
+* Allow skipping user warnings globally
 * Add validate option to trytond-admin
 * Refresh pool of other processes
 * Add clear_all method to Cache
